[tool.poetry]
name = "hacs-honeygain"
version = "0.1.0"
description = "Honeygain integration for HomeAssistant"
authors = ["Lewis England"]
license = "GNU GPL V3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
