[tool.poetry]
name = "hacs-honeygain"
version = "0.1.0"
description = "Honeygain integration for HomeAssistant"
authors = ["Lewis England"]
license = "GNU GPL V3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyhoneygain = "^0.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
homeassistant = "2023.12"
black = "^23.11.0"
isort = "^5.13.1"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
