[tool.poetry]
name = "hacs-honeygain"
version = "1.1.0"
description = "Honeygain integration for HomeAssistant"
authors = ["Lewis England"]
license = "GNU GPL V3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.0,<3.13"
pyhoneygain = "^0.3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
homeassistant = "^2024.1.0"
black = "^24.8.0"
isort = "^5.13.2"
pylint = "^3.3.1"
python-semantic-release = "^9.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
